--- a/biblioteca_digital/views/templates/components/baseb.html
+++ b/biblioteca_digital/views/templates/components/baseb.html
@@ -46,6 +46,10 @@
     </div>    
 
     <!-- Scripts adicionales (si se necesitan) -->
-    {% block extra_scripts %}{% endblock %}
+    {% block extra_scripts %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    {% endblock %}
+
+    {% block modals %}{% endblock %}
 </body>
 </html>
