--- a/biblioteca_digital/materiales/templates/materiales/formularios_altas/alta_libro.html
+++ b/biblioteca_digital/materiales/templates/materiales/formularios_altas/alta_libro.html
@@ -43,7 +43,7 @@
     <div class="col-10">
         <label for="palabras_clave">Palabras Clave:</label>
         <small class="text-danger ms-2">(Las etiquetas deben estar separadas por comas. Ejemplo: etiqueta, etiqueta, etiqueta, ...)</small>
-        <input type="text" class="form-control" value="Escriba aquí..." id="palabras_clave" name="palabras_clave" required>
+        <input type="text" class="form-control" id="palabras_clave" name="palabras_clave" placeholder="Escriba aquí..." required>
     </div>
 </div>
 <div class="row">
