--- a/biblioteca_digital/materiales/templates/materiales/formularios_altas/alta_libro.html
+++ b/biblioteca_digital/materiales/templates/materiales/formularios_altas/alta_libro.html
@@ -11,15 +11,15 @@
   </div>
 </div>
             <div class="col-4">
-                <label for="titulo">Título:</label>
+                <label for="titulo" class="text-input">Título:</label>
                 <input type="text" class="form-control" id="titulo" name="titulo" required placeholder="Escriba aquí...">
             </div>
             <div class="col-3">
-                <label for="autor">Autor:</label>
+                <label for="autor" class="text-input">Autor:</label>
                 <input type="text" class="form-control" id="autor" name="autor" required placeholder="Escriba aquí...">
             </div>
             <div class="col-3">
-                <label for="editorial">Editorial:</label>
+                <label for="editorial" class="text-input">Editorial:</label>
                 <input type="text" class="form-control" id="editorial" name="editorial" required placeholder="Escriba aquí...">
             </div>
         </div>
@@ -27,13 +27,13 @@
         <!-- Segunda fila (Descripción a la izquierda, Siglas Autor y CDU a la derecha en una columna) -->
         <div class="row mb-3">
             <div class="col-4">
-                <label for="descripcion">Descripción:</label>
+                <label for="descripcion" class="text-input">Descripción:</label>
                 <textarea class="form-control textarea-wrapper" id="descripcion" name="descripcion" rows="4" style="min-width: 100%; max-width: 100%; min-height: 70px;" placeholder="Escriba aquí..."></textarea>
             </div>
             <div class="col-4">
-                <label for="siglas_autor">Siglas Autor:</label>
+                <label for="siglas_autor" class="text-input">Siglas Autor:</label>
                 <input type="text" class="form-control mb-3" id="siglas_autor" name="siglas_autor" placeholder="Escriba aquí...">
-                <label for="cdu">CDU:</label>
+                <label for="cdu" class="text-input"> Calsificación / CDU:</label>
                 <input type="text" class="form-control" id="cdu" name="cdu" placeholder="Escriba aquí...">
             </div>
         </div>
@@ -41,14 +41,14 @@
         <!-- La cantidad de ejemplares se controla únicamente con el campo 'cant_ejemplares'. No se requiere botón adicional. -->
 <div class="row mt-4 pt-4">
     <div class="col-10">
-        <label for="palabras_clave">Palabras Clave:</label>
-        <small class="text-danger ms-2">(Las etiquetas deben estar separadas por comas. Ejemplo: etiqueta, etiqueta, etiqueta, ...)</small>
+        <label for="palabras_clave" class="text-input">Palabras Clave:</label>
+        <small class="clave ms-2">(Las etiquetas deben estar separadas por comas. Ejemplo: etiqueta, etiqueta, etiqueta, ...)</small>
         <input type="text" class="form-control" id="palabras_clave" name="palabras_clave" placeholder="Escriba aquí..." required>
     </div>
 </div>
 <div class="row">
-    <div class="col-12" style="height: 30px;">
-        <hr class="custom-dashed-line">
+    <div class="col-12">
+        <div class="separador-punteado"></div>
     </div>
 </div>
 
