--- a/biblioteca_digital/materiales/templates/materiales/formularios_altas/alta_mapa.html
+++ b/biblioteca_digital/materiales/templates/materiales/formularios_altas/alta_mapa.html
@@ -4,7 +4,7 @@
     <div class="row mb-3">
         <div class="col-2">
             <label for="sede">Sede:</label>
-            <select class="form-select" id="sede" name="sede" required>
+            <select class="form-select select-sede" id="sede" name="sede" required>
                 <option value="">Seleccione una sede</option>
                 <option value="sede1">La Plata</option>
                 <option value="sede2">Abasto</option>
@@ -13,8 +13,7 @@
     </div>
     <div class="row mb-3">
     <div class="col-2">
-        <label for="tipo">Tipo <span class="text-danger">*</span></label>
-        <input type="text" class="form-control" id="tipo" name="tipo" required placeholder="Ej: Político, Físico, Temático...">
+        <label for="tipo" class="text-input">Tipo <span class="text-danger">*</span></label>
     </div>
     <!-- Contenedor dinámico para tipo y cantidad -->
     <div id="row mb-3 pt-4">
