--- a/biblioteca_digital/views/templates/materiales/alta_material.html
+++ b/biblioteca_digital/views/templates/materiales/alta_material.html
@@ -17,7 +17,7 @@
             <div class="col-12 col-lg-10">
                 <div class="row">
                     <div class="col-12 col-sm-6 col-lg-2 form-group mb-2">
-                        <label for="tipo_material" class="small">Tipo de Material:</label>
+                        <label for="tipo_material" class="text-input" style="color:#25898D;">Tipo de Material:</label>
                         <select class="form-control form-control-sm" id="tipo_material" name="tipo_material" required>
                             <option value="">Selecciona un tipo de material</option>
                             <option value="libro">LIBRO</option>
