--- a/biblioteca_digital/views/static/css/style_form.css
+++ b/biblioteca_digital/views/static/css/style_form.css
@@ -6,7 +6,7 @@
     margin-bottom: 0.15rem;
 }
 input, textarea, select {
-    background-color: #a0dcf6 !important; 
+    background-color: #25B7BB !important; 
     color: #333;
     border: none;
     border-bottom: 2px solid #8B1D69;
@@ -14,7 +14,7 @@ input, textarea, select {
     transition: border-color 0.3s ease;
 }
 
-input:focus, textarea:focus, select:focus {
+input:focus, textarea:focus, select:focus { 
     outline: none;
     box-shadow: none;
     border-bottom: 2px solid #8B1D69;
@@ -144,7 +144,7 @@ textarea {
 }
 
 .manual-button {
-    background-color: var(--input-border) !important;
+    background-color: #8B1D69 !important;
     width: 100% !important;
     margin-left: 0;
     min-width: 0;
